--- a/pom.xml
+++ b/pom.xml
@@ -132,7 +132,7 @@
                 <artifactId>maven-gpg-plugin</artifactId>
                 <version>1.5</version>
                 <configuration>
-                    <executable>/opt/homebrew/bin/gpg</executable>
+                    <executable>/usr/local/bin/gpg</executable>
                     <keyname>yaochuang</keyname>
                 </configuration>
                 <executions>
