--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,9 @@
     <artifactId>mr-rpc</artifactId>
     <version>1.0.0</version>
     <name>mr-rpc</name>
-    <description>web-rpc-tools</description>
+    <description>
+        a simple and useful rpc-tool ,which denpen java17+ and spring-boot2.7.11
+    </description>
 
     <licenses>
         <license>
@@ -59,12 +61,6 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
-        </dependency>
-
-        <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-web</artifactId>
-            <version>5.3.27</version>
         </dependency>
 
         <dependency>
